# MindForge

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp.json  package-lock.json  pyproject.toml  start.bat  start.sh
.github/workflows/: ci.yml
mindforge-web/: eslint.config.js  index.html  package-lock.json  package.json
mindforge-web/src/: index.css  main.tsx  routeTree.ts
mindforge-web/src/hooks/: use-documents.ts  use-health.ts  use-media-query.ts  use-research-session.ts  use-stats.ts
mindforge-web/src/lib/: api.ts  constants.ts  sse-parser.ts  utils.ts
mindforge-web/src/routes/: __root.tsx  history.lazy.tsx  history.tsx  index.lazy.tsx  index.tsx  knowledge-base.lazy.tsx  knowledge-base.tsx  research.lazy.tsx  research.tsx  settings.lazy.tsx  settings.tsx
mindforge-web/src/store/: history-store.ts  research-store.ts  settings-store.ts  ui-store.ts
mindforge-web/src/types/: api.ts  document.ts  research.ts
scripts/: gen_test_docs.py  mcp_demo.py  mcp_discover.py  run_research.py
src/mindforge/: __init__.py  config.py  db.py  embedder.py  server.py
src/mindforge/agents/: __init__.py  base.py  critic.py  orchestrator.py  planner.py  researcher.py  researcher.py.bak  synthesizer.py
src/mindforge/api/: __init__.py  routes.py  schemas.py  server.py
src/mindforge/ingestion/: __init__.py  chunker.py  embedder.py  parsers.py  raptor.py
src/mindforge/mcp/: __init__.py  client.py  registry.py  server.py
src/mindforge/memory/: __init__.py  episodic.py  semantic.py  semantic.py.bak  working.py
src/mindforge/models/: __init__.py  base.py  (+2 more)
tests/: __init__.py  test_mcp_adapter.py  test_models.py  test_retrieval.py
(+35 files in other folders)
