[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindforge"
version = "1.0.0"
description = "MindForge — 自适应研究助理系统 (Multi-Agent RAG with MCP)"
requires-python = ">=3.9"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",

    # LLM & Embedding
    "openai>=1.30.0",
    "tiktoken>=0.7.0",

    # Vector DB
    "qdrant-client>=1.9.0",

    # Document Parsing
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.7",

    # Retrieval
    "sentence-transformers>=3.0.0",
    "bm25s>=0.1.10",
    "scikit-learn>=1.5.0",

    # Web Framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sse-starlette>=2.1.0",

    # Async
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",

    # Cache
    "redis>=5.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9",

    # Observability (optional - graceful fallback if not installed)

    # Tools
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "FlagEmbedding>=1.3.0",

    # Utils
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "loguru>=0.7.0",
]

[project.scripts]
mindforge-mcp-server = "mindforge.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]
